# kidneyvault-synthetic-medical-data

./: .env.example  .gitignore  .sqlfluff  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: screening.py
app/pages/: 1_Requeteur_IA.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/gold/: gold_cohorte_patient.sql  gold_kpi_activite_par_centre.sql  gold_kpi_histologie.sql  gold_kpi_inclusions_annuelles.sql  schema.yml
dbt/models/omop/: omop_care_site.sql  omop_condition_occurrence.sql  omop_death.sql  omop_drug_exposure.sql  omop_measurement.sql  omop_observation_period.sql  omop_person.sql  omop_procedure_occurrence.sql  (+1 more)
dbt/seeds/: source_to_concept_map.csv
dbt/tests/: assert_silver_chirurgie_apres_dernier_examen.sql  assert_silver_chirurgie_apres_premier_examen.sql  assert_traitement_flag_coherence_dates.sql
docker/postgres-init/: 01-metabase-db.sql
docs/: data_dictionary.md
docs/adr/: adr1.md  adr2.md
sql/indicateurs/: completude_score_renal_par_type_centre.sql
sql/qualite/: chirurgie_avant_examen.sql  divergence_taille_imagerie_anapath.sql  doublon_inter_centres.sql
src/kidneyvault/: agent_requeteur.py  bootstrap.py  build_bronze.py  corrupteur.py  evaluation.py  generator.py  persist.py  publish.py  qualite.py  quota_serveur.py  rate_limit.py  redcap_dictionary.py  schemas.py
tests/: test_agent_requeteur.py  test_corrupteur.py  test_generator.py  test_qualite.py  test_quota_serveur.py  test_rate_limit.py  test_redcap_dictionary.py  test_schemas.py
(+17 files in other folders)
